--- a/.github/workflows/testcafe.yml
+++ b/.github/workflows/testcafe.yml
@@ -4,7 +4,7 @@ name: Basic TestCafe Workflow
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
+  # Triggers the workflow on push or pull request events but only for the "master" branch. Test if "master works or should be Main"
   push:
     branches: [ "master" ]
   pull_request:
